updating task 1 image

--- a/hw1/index.html
+++ b/hw1/index.html
@@ -68,7 +68,7 @@
 		<p></p>
 
 		<figure>
-			<img src="task2_1.png" alt="single color triangle" style="width:50%"/>
+			<img src="task_1.png" alt="single color triangle" style="width:50%"/>
 			<figcaption>test4.svg</figcaption>
 		</figure>
 
