--- a/hw1/index.html
+++ b/hw1/index.html
@@ -194,7 +194,7 @@
 
 		<p>For <i>L_ZERO</i>, our <i>Texture::get_level(sp)</i> simply returned 0. For <i>L_NEAREST</i>, we rounded <i>D</i> to the nearest integer and returned that value. For <i>L_LINEAR</i>, we returned <i>D</i> as the float value we computed.</p>
 
-		<p>After obtaining the appropriate mipmap level to sample from, our <i>Texture::sample(sp)</i> was implemented as follows: If <i>lsm</i> was not <i>L_LINEAR</i> and <i>psm</i> was <i>P_NEAREST</i>, we called <i>Texture::sample_nearest</i> with the <i>p_uv</i> value from the <i>sp</i> struct and the <i>level</i> converted to an integer, then returned the resulting sample. Similarly, if <i>lsm</i> was not <i>L_LINEAR</i> and <i>psm</i> was <i>P_LINEAR</i>, we called <i>Texture::sample_bilinear</i> with the <i>p_uv value</i> from the <i>sp</i> struct and the <i>level</i> converted to an integer, then returned the resulting sample. Finally, for <i>lsm == L_LINEAR</i>, we called either <i>Texture::sample_nearest</i> or <i>Texture::sample_bilinear</i> for both the floor and ceiling of the returned <i>level</i> depending on the value of <i>psm</i>. We then interpolated between these two samples and returned the final result.</p>
+		<p>After obtaining the appropriate mipmap level to sample from, the rest of our <i>Texture::sample(sp)</i> algorithm was implemented as follows: If <i>lsm</i> was not <i>L_LINEAR</i> and <i>psm</i> was <i>P_NEAREST</i>, we called <i>Texture::sample_nearest</i> with the <i>p_uv</i> value from the <i>sp</i> struct and the <i>level</i> converted to an integer, then returned the resulting sample. Similarly, if <i>lsm</i> was not <i>L_LINEAR</i> and <i>psm</i> was <i>P_LINEAR</i>, we called <i>Texture::sample_bilinear</i> with the <i>p_uv value</i> from the <i>sp</i> struct and the <i>level</i> converted to an integer, then returned the resulting sample. Finally, for <i>lsm == L_LINEAR</i>, we called either <i>Texture::sample_nearest</i> or <i>Texture::sample_bilinear</i> for both the floor and ceiling of the returned <i>level</i> depending on the value of <i>psm</i>. We then interpolated between these two samples and returned the final result.</p>
 
 		<p>When comparing pixel sampling, level sampling, and supersampling (which adjusts the number of samples per pixel), we observe that in terms of speed, pixel sampling is the fastest, supersampling is the slowest, and level sampling falls in between. This is because pixel sampling only requires checking a fixed number of texels at the highest resolution, which is a fast computation. In contrast, level sampling incurs additional overhead from constructing different mipmaps on top of performing a specific pixel sampling technique. However, once the mipmaps are built, level sampling performs similarly to pixel sampling. Supersampling on the other hand requires sampling multiple times per pixel each time an image is rendered, which is a much slower process.</p>
 
@@ -205,7 +205,7 @@
 		<p>Below, we also provide speed, memory usage, and antialiasing power comparisons between different settings for each of the three techniques.</p>
 
 
-		<h3>Level Sampling Method</h3>
+		<h3>Level Sampling</h3>
     <table>
         <tr>
             <th>Level Sampling Method</th>
@@ -216,24 +216,24 @@
         <tr>
             <td>L_ZERO</td>
             <td>Fast - samples from the level 0 mipmap</td>
-            <td>Low - only requires the full resolution texture image</td>
+            <td>Low - only requires the full-resolution texture image</td>
             <td>Low - aliasing artifacts are clearly visible</td>
         </tr>
         <tr>
             <td>L_NEAREST</td>
             <td>Fast - samples from the nearest mipmap level</td>
-            <td>High - requires storage of the texture at several resolution levels</td>
+            <td>High - requires storage of the texture at several resolutions</td>
             <td>Average - adds more blurring and reduces pixelation</td>
         </tr>
         <tr>
             <td>L_LINEAR</td>
             <td>Fairly fast - samples from two different mipmap levels and interpolates these values</td>
-            <td>High - requires storage of the texture at several resolution levels</td>
+            <td>High - requires storage of the texture at several resolutions</td>
             <td>High - smoother color transitions in the image</td>
         </tr>
     </table>
 
-    <h3>Pixel Sampling Method</h3>
+    <h3>Pixel Sampling</h3>
     <table>
         <tr>
             <th>Pixel Sampling Method</th>
@@ -244,18 +244,18 @@
         <tr>
             <td>P_NEAREST</td>
             <td>Fast - returns the color of the nearest texel</td>
-            <td>Low - accesses a constant number of texels (1)</td>
+            <td>Low - only requires the full-resolution texture image</td>
             <td>Low - image is very pixelated</td>
         </tr>
         <tr>
             <td>P_LINEAR</td>
             <td>Fairly fast - computes a weighted average of the four closest texel colors</td>
-            <td>Low - accesses a constant number of texels (4)</td>
+            <td>Low - only requires the full-resolution texture image</td>
             <td>High - smoother transitions between different colors</td>
         </tr>
     </table>
 
-    <h3>Sampling Rate</h3>
+    <h3>Supersampling</h3>
     <table>
         <tr>
             <th>Sampling Rate</th>
@@ -283,7 +283,7 @@
         </tr>
     </table>
 	<p></p>
-	<p>Below are four versions of our chosen image (UC Berkeley view) using different level sampling and pixel sampling combinations. We observed that with <i>L_ZERO</i> and <i>P_NEAREST</i>, the image appears highly pixelated as it uses the full-resolution image with nearest sampling, as seen in the view of a part of the bridge in the pixel inspector. When switching to <i>L_ZERO</i> and <i>P_LINEAR</i>, we noticed that while the shades of some individual pixels changed, there wasn't a significant difference in the overall image. This is because <i>L_ZERO</i> prevents the pixels from taking on many intermediate values, which limits the effect of the averaging done by <i>P_LINEAR</i>. The pixel inspector confirms this, as there is still noticeable pixelation on the bridge. With <i>L_NEAREST</i> and <i>P_NEAREST</i>, we start to see more blurring, as we are now sampling from a lower-resolution texture map, although some pixelation still remains. The pixel inspector shows that the bridge cables are completely blurred, which results from applying the lower-resolution texture. Finally, with <i>L_NEAREST</i> and <i>P_LINEAR</i>, the image becomes fully smoothed. In the pixel inspector, we can now see that the colors of the sky and bridge are more blended with each other.</p>
+	<p>Below are four versions of our chosen image (UC Berkeley view) using different level sampling and pixel sampling combinations. We observed that with <i>L_ZERO</i> and <i>P_NEAREST</i>, the image appears highly pixelated as it uses the full-resolution image with nearest sampling, as seen in the view of a part of the bridge in the pixel inspector. When switching to <i>L_ZERO</i> and <i>P_LINEAR</i>, we noticed that while the shades of some individual pixels changed, there wasn't a significant difference in the overall image. This is because <i>L_ZERO</i> prevents the pixels from taking on many intermediate values, which limits the effect of the averaging done by <i>P_LINEAR</i>. The pixel inspector confirms this, as there is still noticeable pixelation on the bridge. With <i>L_NEAREST</i> and <i>P_NEAREST</i>, we start to see more blurring as we are now sampling from a lower-resolution texture map, although some pixelation still remains. The pixel inspector shows that the bridge cables are completely blurred, which results from applying the lower-resolution texture. Finally, with <i>L_NEAREST</i> and <i>P_LINEAR</i>, the image becomes fully smoothed. In the pixel inspector, we can now see that the colors of the sky and bridge are more blended with each other.</p>
 
 		<div style="display: flex; flex-direction: column; align-items: center;">
 			<table style="width: 100%; text-align: center; border-collapse: collapse;">
